<package>
  <name>uvc_cam</name>
  <version>1.0.0</version>
  <description>A node and utilities for webcams supporting the uvcvideo driver (e.g. Logitech cameras and many others).

  Package is GPL since some of its code is adapted from GPL programs such as guvcview</description>
  <maintainer email="eric@ericperko.com">Eric Perko</maintainer>

  <license>GPL</license>

  <url type="website">None</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Morgan Quigley</author>
  <author>Eric Perko</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>camera_info_manager</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>driver_base</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib -luvc_cam" cflags="-I${prefix}/include"/>
</export>

</package>
